# ai-doudizhu-test

./: .env.example  .gitignore  README.md  pyproject.toml
src/doudizhu/: __init__.py  ai.py  cards.py  cli.py  combos.py  decision_types.py  env.py  game.py  llm.py  web_live.py
tests/: test_combos.py  test_env.py  test_game.py  test_live_cli.py  test_llm.py  test_web_live.py
