[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "doudizhu-ai"
version = "0.1.0"
description = "A CLI Dou Dizhu engine for AI-vs-AI matches and statistics."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
dependencies = ["boto3>=1.34,<2"]

[project.scripts]
doudizhu = "doudizhu.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
